minimal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "my.first.k8s.com"
      http:
        paths:
          - path: "/luna"
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 8080
